@@ -41,7 +41,7 @@ type Provider struct {
 	bus       bus.Bus
 	watcher   kubernetes.Watcher
 	metagen   kubernetes.MetaGenerator
-	templates *template.Mapper
+	templates template.Mapper
 	builders  autodiscover.Builders
 	appenders autodiscover.Appenders
 }
